--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.0",
-    "chai": "^4.3.4"
+    "chai": "^4.3.4",
+    "ethers": "^5.5.2"
   }
 }
