--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "devDependencies": {
     "hardhat": "^2.7.0",
-    "hardhat-gas-reporter": "^1.0.6"
+    "hardhat-gas-reporter": "^1.0.6",
+    "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solidity-coverage": "^0.7.17"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
@@ -9,5 +12,8 @@
     "@openzeppelin/contracts": "^4.4.0",
     "chai": "^4.3.4",
     "ethers": "^5.5.2"
+  },
+  "scripts": {
+    "generateProfile": "sol-profiler ./contracts/"
   }
 }
